Apply rule "Preferjava.lang.String.formatted(Object...)"