@@ -70,7 +70,7 @@ public class LoggerUtil {
 		//
 		try (final InputStream is = clz != null
 				? clz.getResourceAsStream(
-						String.format("/%1$s.class", StringsUtil.replace(Strings.CS, clz.getName(), ".", "/")))
+						"/%1$s.class".formatted(StringsUtil.replace(Strings.CS, clz.getName(), ".", "/")))
 				: null) {
 			//
 			ms = JavaClassUtil.getMethods(
