@@ -111,7 +111,7 @@ public abstract class XlsUtil {
 		List<Object> entryNames = null;
 		//
 		try (final InputStream is = getResourceAsStream(clz,
-				String.format("/%1$s.class", StringsUtil.replace(Strings.CS, getName(clz), ".", "/")))) {
+				"/%1$s.class".formatted(StringsUtil.replace(Strings.CS, getName(clz), ".", "/")))) {
 			//
 			JavaClass javaClass = null;
 			//
