@@ -78,7 +78,7 @@ class ClassInfoUtilTest {
 		//
 		try (final InputStream is = clz != null
 				? clz.getResourceAsStream(
-						String.format("/%1$s.class", StringsUtil.replace(Strings.CS, clz.getName(), ".", "/")))
+						"/%1$s.class".formatted(StringsUtil.replace(Strings.CS, clz.getName(), ".", "/")))
 				: null) {
 			//
 			final org.apache.bcel.classfile.Method[] methods = JavaClassUtil.getMethods(
@@ -191,7 +191,7 @@ class ClassInfoUtilTest {
 		//
 		try (final InputStream is = clz != null
 				? clz.getResourceAsStream(
-						String.format("/%1$s.class", StringsUtil.replace(Strings.CS, clz.getName(), ".", "/")))
+						"/%1$s.class".formatted(StringsUtil.replace(Strings.CS, clz.getName(), ".", "/")))
 				: null) {
 			//
 			final org.apache.bcel.classfile.Method[] methods = JavaClassUtil.getMethods(
